--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
      <ul>
          <li> Vagrant </li>
-         <li> Docker </li>
+         <li> curso de Docker: creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integracion continua madurez y productividad en el desarrollo de software</li>
          <li> Kubernetes </li>
