--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integracion continua madurez y productividad en el desarrollo de software</li>
-         <li> Kubernetes </li>
+         <li> Kubernetes introduccion a la orquestacion de containers </li>
      </ul>
 </body>
 </html>
